--- a/DAY3/OU_GenAI_LLM_Jan26_3.ipynb
+++ b/DAY3/OU_GenAI_LLM_Jan26_3.ipynb
@@ -2524,6 +2524,123 @@
     "# Step 7: QAChain\n",
     "# Step 8: Query -- Question+ChartConfigurable "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "b9256f5f-e20c-4bc1-8c68-32ad4284cedd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_community.document_loaders import PyPDFLoader\n",
+    "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
+    "from langchain_community.vectorstores import FAISS\n",
+    "from langchain_huggingface import HuggingFaceEmbeddings\n",
+    "from langchain_groq import ChatGroq\n",
+    "from langchain.chains import RetrievalQA # Higher version of langchain -> from langchain_classic.chains import RetrievalQA\n",
+    "from langchain.prompts import ChatPromptTemplate\n",
+    "\n",
+    "from langchain_community.chat_message_histories import ChatMessageHistory\n",
+    "from langchain_core.chat_history import BaseChatMessageHistory\n",
+    "from langchain_core.runnables.history import RunnableWithMessageHistory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "0685ad10-1639-4f8c-9102-8e5376ffc4dd",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\karth\\AppData\\Roaming\\Python\\Python313\\site-packages\\torch\\nn\\modules\\module.py:1762: FutureWarning: `encoder_attention_mask` is deprecated and will be removed in version 4.55.0 for `BertSdpaSelfAttention.forward`.\n",
+      "  return forward_call(*args, **kwargs)\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Step-1 Load pdf file\n",
+    "loader = PyPDFLoader(\"attention.pdf\")\n",
+    "documents = loader.load()\n",
+    "\n",
+    "## Step-2 split the docs\n",
+    "text_splitter = RecursiveCharacterTextSplitter(chunk_size=500,chunk_overlap=50)\n",
+    "docs = text_splitter.split_documents(documents)\n",
+    "\n",
+    "# Step-3 embedding object\n",
+    "embeddings = HuggingFaceEmbeddings(model=\"sentence-transformers/all-MiniLM-L6-v2\")\n",
+    "\n",
+    "# step 4 stores to vectordb\n",
+    "vectorstore  = FAISS.from_documents(docs,embeddings)\n",
+    "\n",
+    "# step 5 create retrievalobject\n",
+    "retriever_obj = vectorstore.as_retriever()\n",
+    "\n",
+    "# step 6 create llm object\n",
+    "llm_obj = ChatGroq(model=\"llama-3.1-8b-instant\",api_key=os.getenv(\"GROQ_API_KEY\"))\n",
+    "\n",
+    "\n",
+    "# Step 7 Prompt with history\n",
+    "my_prompt = ChatPromptTemplate.from_template(\"\"\"\n",
+    "use the following context and chat history to answer the question.\n",
+    "chat history:\n",
+    "{history}\n",
+    "Context:\n",
+    "{context}\n",
+    "Question:\n",
+    "{query}\n",
+    "\"\"\")\n",
+    "\n",
+    "# step 8: QAChain\n",
+    "rag_chain = RetrievalQA.from_chain_type(llm = llm_obj,retriever=retriever_obj,chain_type_kwargs={\"prompt\":my_prompt})\n",
+    "\n",
+    "# Step 9 Chat history\n",
+    "\n",
+    "stores = {} \n",
+    "\n",
+    "def get_session_history(session_id: str) -> BaseChatMessageHistory:\n",
+    "    if session_id not in stores:\n",
+    "        stores[session_id] = ChatMessageHistory()\n",
+    "    return stores[session_id]\n",
+    "\n",
+    "rag_with_history = RunnableWithMessageHistory(rag_chain,get_session_history,input_messages_key=\"query\",history_messages_key='history')\n",
+    "\n",
+    "# Step 10: Create session ID and invoke rag with chathistory\n",
+    "session_id = \"session-1\"\n",
+    "query1 = \"What is attention in transformer?\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "1abe26f0-15d9-46d4-a49c-c8c4cbc717c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#rag_with_history.invoke({\"query\":query1},config={\"configurable\":{\"session_id\":session_id}})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "4ff2ec36-540f-4caf-87a1-bc93dc84d1a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#help(rag_with_history.invoke)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bee10bf2-8832-4682-9fef-f8cea7760c92",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
