--- a/DAY3/OU_GenAI_LLM_Jan26_3.ipynb
+++ b/DAY3/OU_GenAI_LLM_Jan26_3.ipynb
@@ -2636,11 +2636,568 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "id": "bee10bf2-8832-4682-9fef-f8cea7760c92",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#help(ChatPromptTemplate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc614cb5-cba2-442a-96a2-a708d2bc1997",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dynamically insert a message - at runtime?\n",
+    "MessagesPlaceholder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97342a83-8a77-4044-b887-bb5191c0a324",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.prompts import ChatPromptTemplate,MessagesPlaceholder\n",
+    "prompt = ChatPromptTemplate.from_messages([\n",
+    "    (\"system\",\"You are helpful assistant.\"),  <--- fixed \n",
+    "    MessagesPlaceholder(variable_name=\"chat_history\"), \n",
+    "    (\"human\",\"{question}\")                  |<------ dynamically list of messages       \n",
+    "])                |<-- user input /current input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "db1f058d-3e3e-4302-9dfc-a2bd7706e857",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.prompts import ChatPromptTemplate,MessagesPlaceholder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "c9092a69-857b-4333-9324-a053b99f0b07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt = ChatPromptTemplate.from_messages([\n",
+    "    (\"system\",\"You are helpful assistant. Answer all the question in {language}.\"),\n",
+    "    MessagesPlaceholder(variable_name=\"question\")])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "6e1fc830-151e-40a8-a85a-fff1c4547f77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chain = prompt|llm_obj"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "3451aa4e-0f31-4105-83dc-04316821aae6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "content=\"Bonjour Leo ! Je suis ravi de faire votre connaissance. Comment puis-je vous aider aujourd'hui ?\" additional_kwargs={} response_metadata={'token_usage': {'completion_tokens': 23, 'prompt_tokens': 52, 'total_tokens': 75, 'completion_time': 0.027591191, 'prompt_time': 0.007610688, 'queue_time': 0.065934522, 'total_time': 0.035201879}, 'model_name': 'llama-3.1-8b-instant', 'system_fingerprint': 'fp_4387d3edbb', 'service_tier': 'on_demand', 'finish_reason': 'stop', 'logprobs': None} id='run--5ba51db4-4ce9-4fac-b95b-614439bf6e49-0' usage_metadata={'input_tokens': 52, 'output_tokens': 23, 'total_tokens': 75}\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = chain.invoke({'question':[HumanMessage(content=\"Hello my name is leo\")],\"language\":\"french\"})\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "23e3c0bb-cd6d-486c-b3b9-1e7406d50d32",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bonjour Leo ! Je suis ravi de faire votre connaissance. Comment puis-je vous aider aujourd'hui ?\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(response.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "f3c7984f-6f6e-47f3-9c4e-e0263f61884a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "नमस्ते! मैं आपका सहायक हूँ। आपका नाम लियो है, ज़रूर बताएं, आप मुझसे क्या पूछना चाहते हैं?\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = chain.invoke({'question':[HumanMessage(content=\"Hello my name is leo\")],\"language\":\"hindi\"})\n",
+    "print(response.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "5b2e1287-c8d2-48d5-9f20-6c67ee380790",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "నమస్కారం లీఓ అంటే మిమ్మల్ని ఎలా అంటారు?\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = chain.invoke({'question':[HumanMessage(content=\"Hello my name is leo\")],\"language\":\"telugu\"})\n",
+    "print(response.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "id": "a813f5ad-1e15-40a4-9019-bf9b2682c2a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "வணக்கம்! நான் உங்களுக்கு உதவ இங்கு இருக்கிறேன். நீங்கள் லியோ என உங்களை அறிமுகப்படுத்திக் கொண்டீர்கள். நலமா?\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = chain.invoke({'question':[HumanMessage(content=\"Hello my name is leo\")],\"language\":\"tamil\"})\n",
+    "print(response.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "5c7920d2-d9ba-4df1-b0a8-324e3614c520",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ನಮಸ್ಕಾರ ಲಿಯೋ! ನಿಮಗೆ ಹಾಗು ನಿಮ್ಮ ಭಾಷೆಗೆ ಸಂಬಂಧಿಸಿ ನಾನು ನೀಡುವ ಸಹಾಯಕರಾಗಿದ್ದೇನೆ. ನೀವು ಯಾವ ಬಗ್ಗೆ ಪ್ರಶ್ನೆಗಳನ್ನ ಕೇಳಲು ಬಯಸುತ್ತೀರಾ?\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = chain.invoke({'question':[HumanMessage(content=\"Hello my name is leo\")],\"language\":\"kannada\"})\n",
+    "print(response.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25780b69-e722-4187-b104-5768e9b88bab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65140d7e-e538-4dd5-8a4f-04a885cbc34b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "python <---------------------------> Database\n",
+    "|->DS+class+object+method                  |->SQL\n",
+    "      --------------------------------->\n",
+    "      <----------------DBI-----------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "04399b4f-b433-4d32-b892-9f9a589ab01d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Connection at 0x1d4aea6d6c0>"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sqlite3\n",
+    "sqlite3.connect(\"test1.db\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "afdad2c0-4056-48d9-8551-bee21215005e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x1d4a657e540>"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conn = sqlite3.connect(\"test1.db\")\n",
+    "conn.cursor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "id": "2d6d31ae-0605-482d-b3bf-74738301e021",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sth = conn.cursor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "a1c13cad-2492-444e-b2b3-e585af70f1fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x1d4ac88eb40>"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sth.execute(\"create table product(id NUMBER,pname TEXT,pcost NUMBER)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "id": "16d9ebf0-5c63-455d-91c4-e761f897c602",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x1d4ac88eb40>"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sth.execute(\"insert into product(id,pname,pcost) values(101,'pA',1000)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "id": "a416f7fa-4e18-4870-a1a3-2685dab46238",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x1d4ac88eb40>"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sth.execute(\"insert into product(id,pname,pcost) values(102,'pB',2000)\")\n",
+    "sth.execute(\"insert into product(id,pname,pcost) values(103,'pC',3000)\")\n",
+    "sth.execute(\"insert into product(id,pname,pcost) values(103,'pD',4000)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "id": "d87304b0-e40f-4306-bcfc-7c4bc028d141",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x1d4ac88eb40>"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "va = 105\n",
+    "vb = 'pE'\n",
+    "vc = 4500\n",
+    "sth.execute(\"insert into product(id,pname,pcost) values(?,?,?)\",(va,vb,vc))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "id": "8a950f1c-dfbc-4755-8458-fac457c1658e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x1d4ac88eb40>"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sth.execute(\"select *from product\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "id": "98222c87-838d-4bd7-a123-f01bc4bbba14",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(101, 'pA', 1000)"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sth.fetchone()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "08c1a640-82c2-4494-9374-d0f6a1a2b2dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(102, 'pB', 2000)"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sth.fetchone()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "id": "b1677747-9c9d-4c0e-b48a-c50a3ecc9607",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(103, 'pC', 3000)"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sth.fetchone()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "id": "c82cd1d4-117d-4e1f-8551-9203508d4db1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(103, 'pD', 4000)"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sth.fetchone()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "id": "250198fb-a169-4fb0-8c73-671385177ec5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(105, 'pE', 4500)"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sth.fetchone()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "id": "79c9bed0-ea90-4114-aff8-c5c8ec49a2b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sth.fetchone()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "id": "7950eccc-8a8a-47ba-b4d3-0c3b699a7f6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(101, 'pA', 1000),\n",
+       " (102, 'pB', 2000),\n",
+       " (103, 'pC', 3000),\n",
+       " (103, 'pD', 4000),\n",
+       " (105, 'pE', 4500)]"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sth.execute(\"select *from product\")\n",
+    "sth.fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "id": "3e4dc09d-c495-47af-985e-7fff55c0669f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(101, 'pA', 1000),\n",
+       " (102, 'pB', 2000),\n",
+       " (103, 'pC', 3000),\n",
+       " (103, 'pD', 4000),\n",
+       " (105, 'pE', 4500)]"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sth.execute(\"select *from product\")\n",
+    "list(sth) # generator "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "id": "5d549bcc-97eb-4f8b-bdd4-02cfe125a2a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "id": "37205965-ae21-4f51-9c13-3c9e3686aff4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c59f9481-abb2-4cbd-a097-82a83b565451",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#################  End of the Day3 ################"
+   ]
   }
  ],
  "metadata": {
