--- a/DAY4/OU_GenAI_LLM_Jan26_4.ipynb
+++ b/DAY4/OU_GenAI_LLM_Jan26_4.ipynb
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 75,
    "id": "1393072f-60b3-4691-84a3-95e08a0c1a16",
    "metadata": {},
    "outputs": [],
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 76,
    "id": "f945ac6e-c01c-4fd0-80f3-e9eb139c2848",
    "metadata": {},
    "outputs": [],
@@ -699,7 +699,8 @@
     "    return { \"question\": new_q, \"retries\": state[\"retries\"] + 1 }\n",
     "\n",
     "def AGENT4_decision(state: GraphState):\n",
-    "    if(state[\"documents\"]) == 0 and state[\"retries\"] < 2:\n",
+    "    #if(len(state[\"documents\"]) == 0 and state[\"retries\"] < 2:\n",
+    "    if len(state[\"documents\"]) == 0:\n",
     "        return \"retry\"\n",
     "    return \"generate\"\n",
     "\n",
@@ -708,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 77,
    "id": "f78215fc-b314-4359-97f6-8299a0a55123",
    "metadata": {},
    "outputs": [
@@ -754,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 78,
    "id": "6afdae7b-e693-402b-a309-fada67346055",
    "metadata": {},
    "outputs": [
@@ -788,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 79,
    "id": "c3dce15b-68ee-4dd3-b88d-6758916a514e",
    "metadata": {},
    "outputs": [
@@ -823,7 +824,63 @@
    "id": "dcae0da2-264e-45c1-a4a6-f8b683849f74",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Case 1 . No documents found \n",
+    "retrieve\n",
+    "|\n",
+    "AGENT4_decision ->returns \"retry\"\n",
+    "|\n",
+    "rewrite\n",
+    "    |\n",
+    "    retrieve(again)\n",
+    "\n",
+    "---------------------------\n",
+    "Case 2: Documents found\n",
+    "\n",
+    "retrieve\n",
+    "    |\n",
+    "AGENT4_decision ->return \"generate\"\n",
+    "    |\n",
+    "    generate\n",
+    "    |\n",
+    "    END"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa85510a-7585-4e0f-9362-7751cb21be1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Fine-Tuning\n",
+    "--------------\n",
+    "Pre-trained model \n",
+    "=================// public data \n",
+    "\n",
+    " PersonA -->[500 books - about list of animals]\n",
+    "             ==================================//\n",
+    "   |\n",
+    "   |\n",
+    " RAG\n",
+    " - data_set ---------------------- PersonA(LLM)\n",
+    "    - product features                             <--- EndUser(Customer): Q: about product\n",
+    "                                                                                   .... token-pretrained\n",
+    "                                           |----------------------------------pre-trained answer \n",
+    "\n",
+    "During fine-tuning\n",
+    "model weights changed  ->model's behavior changed ->biased our data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "500af264-1d46-4b41-a978-13c9c57a0a05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#####################################   End of DAY5 ######################"
+   ]
   }
  ],
  "metadata": {
